--- a/style.css
+++ b/style.css
@@ -14,5 +14,86 @@
 .less5-3 ul li{
     margin-bottom: 5px;
 }
+.my-body{
+    margin-left: 50px;
+    padding: 0;
+}
+.oderform select{
+    width: 185px;
+    padding: 4px;
+}
 
+.list{
+    width: 230px;
+    padding: 5px;
+}
+/*table simplesimple*/
+h1 {
+    color: red;
+}
+.container{
+    margin-left: 50px;
+}
+.form{
+    margin-left: 50px;
+    border: 1px solid;
+    border-radius: 3px;
+    width: 266px;
+    padding: 14px;
+}
+.all{
+    margin-left: 16px;
+    padding: 8px;
 
+}
+.all form label{
+    margin-left: 16px;
+    padding: 8px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.form-money{
+    position: relative;
+    right: 30px;
+}
+.form-get input{
+    width: 182px;
+}
+.form .all h2{
+  
+}
+.form .all h3{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    margin-bottom: 25px;
+}
+.name input{
+    width: 97px;
+    margin: 5px;
+    position: relative;
+    right: 7px;
+    bottom: 64px;
+}
+h3 p{
+    color: red;
+    position: relative;
+    text-align: center;
+    text-align: top;
+    bottom: 46px;
+    font-size: 26px;
+}
+.email{
+    position: relative;
+    bottom: 45px;
+}
+.email input{
+    width: 210px;
+    padding: 2px;
+}
+.phone input{
+    width: 60px;
+}
+.send{
+    position: relative;
+    top: 20px;
+    width: 58px;
+}
