--- a/css/table.css
+++ b/css/table.css
@@ -9,15 +9,7 @@ th {
   text-align: left;
   padding: 8px;
 }
-tr:nth-child(1) {
+tr:nth-child(odd) {
   background-color: #dddddd;
 }
-tr:nth-child(3) {
-  background-color: #dddddd;
-}
-tr:nth-child(5) {
-  background-color: #dddddd;
-}
-tr:nth-child(7) {
-  background-color: #dddddd;
-}
+
